Closed
Bug 1342865
Opened 9 years ago
Closed 9 years ago
[UI Events-key] KeyboardEvent.key value of printable keys with Control are usually wrong on macOS
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
mozilla54
| Tracking | Status | |
|---|---|---|
| firefox54 | --- | fixed |
People
(Reporter: masayuki, Assigned: masayuki)
References
(Regressed 1 open bug)
Details
Attachments
(1 file)
When Control is pressed, KeyboardEvent.key should be computed without Control key (except when Ctrl+Foo causes inputting text). However, as far as I tested, some keys work as expected but especially when Shift key is also pressed, the value is odd. For example, when I press Ctrl+Semicolon, key value is ';' as expected but Ctrl+Shift+Semicolon, key value is also ';', rather than '+' with Japanese Keyboard layout.
I guess that we need to reimplement around here when Ctrl key is pressed.
| Assignee | ||
Comment 1•9 years ago
|
||
| Assignee | ||
Comment 2•9 years ago
|
||
FYI: Spec definition is here:
https://w3c.github.io/uievents-key/#selecting-key-attribute-values
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → masayuki
Status: NEW → ASSIGNED
| Comment hidden (mozreview-request) |
Comment 4•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8842258 [details]
Bug 1342865 When Control key is pressed and InsertText() isn't called on macOS, its KeyboardEvent.key value should be characters which are inputted by the key without Control key state
https://reviewboard.mozilla.org/r/116136/#review118118
Attachment #8842258 -
Flags: review?(m_kato) → review+
Pushed by masayuki@d-toybox.com:
https://hg.mozilla.org/integration/autoland/rev/3bee9644cf4c
When Control key is pressed and InsertText() isn't called on macOS, its KeyboardEvent.key value should be characters which are inputted by the key without Control key state r=m_kato
Comment 6•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in
before you can comment on or make changes to this bug.
Description
•